# bright-talent

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  Makefile  README.md  README.zh-CN.md  SECURITY.md  docker-compose.yml  ruff.toml
bridge/: README.md  config.example.yaml  pyproject.toml
bridge/bridge/: __init__.py  app.py  auth.py  commands.py  config.py  dream.py  memory.py  sanitize.py  sessions.py
bridge/tests/: conftest.py  fake_claude.py  test_allowlist_policy.py  test_auth.py  test_commands.py  test_memory.py  test_resilience.py  test_sanitize.py  test_secret_policy.py  test_sessions.py  test_verification.py  test_webhook_auth.py
console/: .gitignore  README.md  pyproject.toml
console/console/: __init__.py  api.py  app.py  config.py  db.py  drafts.py  health.py  providers.py  repo_scan.py
console/frontend/: app.js  index.html  style.css
console/tests/: conftest.py  test_allowlist.py  test_api.py  test_ci_provider.py  test_health.py  test_repo_scan.py  test_state_machine.py
console/tests_e2e/: test_frontend_smoke.py
docs/: example-review.md  (+1 more)
eval/: README.md  judge.toml  pyproject.toml
eval/de_eval/: __init__.py  agent.py  cli.py  coverage.py  e2e.py  fixture_runtime.py  fixture_server.py  frontmatter.py  judge.py  lint.py  paths.py  report.py  safety.py  shim.py  triggers.py  yaml_io.py
eval/fixture-instance/: .build-info.json  .build-manifest.json  .de-eval-fixture-cache.json  .managed-files.json  instance.yaml  skills.yaml
eval/fixture-instance/editor/: CLAUDE.md
eval/fixture-instance/kb/team/: _index.md
eval/runs/20260715T164012Z/review-violating-ticket/shims/: curl
eval/tests/: test_access_review_logic.py  test_agent_parse.py  test_coverage.py  test_e2e_axis.py  test_frontmatter.py  test_gate_math.py  test_judge.py  test_strict_replay.py  test_ticket_review_logic.py
mocks/: change_gateway.py  chat_client.py  pyproject.toml  service_catalog.json
mocks/tests/: test_change_gateway.py
scaffold/builder/: pyproject.toml
scaffold/builder/builder/: __init__.py  bridge.py  build.py  cli_common.py  diff.py  doctor.py  errors.py  merge.py  release.py  render.py  skills.py  status.py  upgrade.py  validate.py
scaffold/builder/tests/: test_context_isolator.py  test_diff.py  test_escalation_guard.py  test_merge.py  test_result_sanitizer.py  test_skill_gate.py  test_skills.py  test_validate.py
scaffold/builder/tests/fixtures/bad-instance/: instance.yaml
scaffold/builder/tests/fixtures/good-instance/: .build-info.json  .build-manifest.json  .managed-files.json  instance.yaml
scaffold/builder/tests/fixtures/good-instance/editor/: CLAUDE.md
scaffold/builder/tests/fixtures/monotonic-instance/: instance.yaml
scaffold/builder/tests/fixtures/shadow-instance/: instance.yaml
(+90 files in other folders)
