[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bridge"
version = "0.1.0"
description = "Chat bridge service for de-demo: webhook -> persistent Claude CLI sessions"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pyyaml",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["bridge"]
