[project]
name = "de-console"
version = "0.1.0"
description = "Fleet governance console for the intelligent-staff worker demo (read-mostly catalog + change-draft workflow)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]
e2e = [
    "pytest>=8.0",
    "playwright>=1.40",
]

[project.scripts]
de-console = "console.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["console"]
