[project]
name = "de-eval"
version = "0.1.0"
description = "de-eval — evaluation harness for skills/instances (docs/40-evaluation/eval-spec.md)"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
de-eval = "de_eval.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["de_eval"]
