[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "de-demo-mocks"
version = "0.1.0"
description = "Mock services for de-demo: Change Gateway, service catalog"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "."}
packages = []
