[project]
name = "builder"
version = "0.1.0"
description = "DE scaffold builder — composes runtime/ from base + instance config"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["builder"]
